--- a/gb/22/3/28/n13678637.md
+++ b/gb/22/3/28/n13678637.md
@@ -150,7 +150,7 @@
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank">揭开活摘器官黑幕</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/1/21/n10990583.md#1" target="_blank">林辉：岳飞忠魂千古颂 中共侮辱英雄可憎</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/17/6/27/n9325401.md#1" target="_blank">林展翔：迫害法轮功责任人入美将面临制裁</a></li>
+<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank">大陆见不到的震撼场面</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/1/10/n10045158.md#1" target="_blank">《苦菜花》人物原型的真实人生（1）</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/14/4/12/n4130061.md#1" target="_blank">正清：法轮功没有“男女双修”</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
